# TAOTest

./: .gitignore  README.md
calc/: CalcWithCorba.ods  README.md
calc/src/: CMakeLists.txt
calc/src/main/: .directory  CMakeLists.txt
calc/src/main/calcclient/: CMakeLists.txt  calcclient.cpp
calc/src/main/calclib/: CMakeLists.txt  calclibexec.cpp
calc/src/main/calcserver/: CMakeLists.txt  calcserver.cpp
calc/src/main/cpp/: CMakeLists.txt  CalcC.cpp  CalcC.h  CalcC.inl  CalcImpl.cpp  CalcImpl.h  CalcLib.cpp  CalcLib.h  CalcS.cpp  CalcS.h
calc/src/main/idl/: Calc.idl
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
